<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_dialogVenuePickVenue" />

            <Spinner
                android:id="@+id/spn_venueList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"></Spinner>

            <Button
                android:layout_gravity="center"
                android:id="@+id/btn_selectVenue"
                android:text="@string/btn_dialogVenueSelect"
                android:textColor="@color/white"
                android:background="@drawable/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_dialogVenueCreateVenue" />

            <EditText
                android:id="@+id/et_createVenueTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_admin_create_event"
                android:hint="@string/et_dialogVenueCreateVenueHandle"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/et_createVenueAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_admin_create_event"
                android:hint="@string/et_dialogVenueCreateVenueAddress"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/et_createVenueTown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_admin_create_event"
                android:hint="@string/et_dialogVenueCreateVenueTown"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/et_createVenuePostcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_admin_create_event"
                android:hint="@string/et_dialogVenueCreateVenuePostcode"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <TextView
            android:text="@string/tv_dialogVenueTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            tools:context="com.example.mapwithmarker.MapsMarkerActivity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_close"
                android:text="@string/btn_dialogVenueCreateClose"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:layout_marginRight="5dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_create"
                android:layout_marginLeft="5dp"
                android:text="@string/btn_dialogVenueCreateCreate"
                android:textColor="@color/white"
                android:background="@drawable/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>