<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.impl.AdminRolePermission"
    android:orientation="vertical"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_adminRolePermissionTitle"
            android:textSize="@dimen/text_small" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_adminRolePermissionFindUser"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_adminSearchUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_adminRolePermissionFindUserHint"
                    android:layout_weight="7"/>

                <ImageView
                    android:id="@+id/btn_searchUserByEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@android:drawable/ic_menu_search"
                    android:layout_weight="1"/>

            </LinearLayout>

            <ListView
                android:id="@+id/lv_searchUserList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ListView>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_adminRolePermissionList"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lv_selectRoleList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"></ListView>

        <Button
            android:layout_weight="1"
            android:id="@+id/btn_adminRolePermissionUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:ems="15"
            android:text="@string/btn_adminRolePermissionUpdate"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>
